--- a/Uppgift5/Uppgift5.csproj
+++ b/Uppgift5/Uppgift5.csproj
@@ -65,8 +65,17 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MMRow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MasterMindModel.cs" />
+    <Compile Include="MatchResult.cs" />
+    <Compile Include="MMRow.xaml.cs">
+      <DependentUpon>MMRow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
